# corgi-algorithms

./: CMakeLists.txt  install.bat
cmake/: Config.cmake.in
include/corgi/algorithms/: algorithms.h  array.h  enumeration.h  graph.h
include/corgi/algorithms/graphs/: dijkstra.h  graph.h
samples/graphs/dijkstra/: CMakeLists.txt
samples/graphs/dijkstra/src/: main_dijkstra.cpp
src/: CMakeLists.txt  algorithms.cpp  enumeration.cpp  graph.cpp
src/graphs/: dijkstra.cpp  graph.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp
